tests/should_fail/terminates/trait_where.stderr
error: Illegal recursive trait
  --> trait_where.rs:6:1
   |
 6 | pub trait Tr<T>: Sized {
   | ^^^^^^^^^^^^^^^^^^^^^^
   |
note: `Tr` is a bound of `Tr::f`
  --> trait_where.rs:11:15
   |
11 |         Self: Tr<Self>;
   |               ^^^^^^^^

error: aborting due to 1 previous error

